--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="container">
         <label for="show" class="close-btn fas fa-times" title="close"></label>
         <div class="text">ni m3ek sa7a?</div>
-<form action="/Other/new23.html">
+<form action="./Other/new23.html">
         <div class="data">
             <label>tnjmi tktbi ch tbghi i can't read😂</label>
             <input type="text" id="PasswordBox" required>
          </div>
-	<a href='/Other/new23.html' onclick='return checkPassword();'>	
+	<a href='./Other/new23.html' onclick='return checkPassword();'>	
 		<div class="btn">
             <div class="inner">
 				<button type="submit">ki tkmli touchi hna🙄</button>
