--- a/Other/new23.html
+++ b/Other/new23.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	<meta charset="utf-8">
-    <link rel="stylesheet" href="/Style/Style14528.css">
+    <link rel="stylesheet" href="./Style/Style14528.css">
 	<title>Désaturation❤️</title>
 </head>
 <body>
